--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@picocss/pico": "^1.5.7"
+		"@picocss/pico": "^1.5.7",
+		"@upstash/ratelimit": "^0.3.8",
+		"@upstash/redis": "^1.20.0"
 	}
 }
