--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@iconify-json/eos-icons": "^1.1.6",
+		"@iconify-json/uil": "^1.1.4",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.0",
@@ -29,6 +31,7 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
+		"unplugin-icons": "^0.16.1",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
