--- a/.github/workflows/aws-ecr.yml
+++ b/.github/workflows/aws-ecr.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
           REGISTRY_ALIAS: g7f5o4m9
-          ECR_REPOSITORY: ${{ github.event.repository.name }}
+          ECR_REPOSITORY: scqa-client
           IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build a docker container and push it to ECR 
